Hardware/GMS_skx_tma_bindings.f90


             function skx_load_xsnp_miss( mem_load_l3_hit_retired_xsnp_hitm, &
                                          mem_load_retired_fb_hit,&
			                  mem_load_retired_l1_miss)&
			                  bind(c,name="skx_load_xsnp_miss")
                    integer(c_size_t) :: mem_load_l3_hit_retired_xsnp_hitm
                    integer(c_size_t) :: mem_load_retired_fb_hit
                    integer(c_size_t) :: mem_load_retired_l1_miss
                    real(c_float)     :: skx_load_xsnp_miss
             end function skx_load_xsnp_miss
             
          
        end interface


        interface


           function skx_load_local_miss(  mem_load_l3_miss_retired_local_dram,&
                                          mem_load_retired_fb_hit,&
			                  mem_load_retired_l1_miss) &
                                          bind(c,name="skx_load_local_miss")
                integer(c_size_t) ::  mem_load_l3_miss_retired_local_dram
                integer(c_size_t) :: mem_load_retired_fb_hit
                integer(c_size_t) :: mem_load_retired_l1_miss
                real(c_float)     :: skx_load_local_miss
           end function skx_load_local_miss
           
            

        end interface

 
        interface


           function skx_load_remote_miss(  mem_load_l3_miss_retired_remote_dram,&
                                          mem_load_retired_fb_hit,&
			                  mem_load_retired_l1_miss) &
                                          bind(c,name="skx_load_remote_miss")
                integer(c_size_t) ::  mem_load_l3_miss_retired_remote_dram
                integer(c_size_t) :: mem_load_retired_fb_hit
                integer(c_size_t) :: mem_load_retired_l1_miss
                real(c_float)     :: skx_load_local_miss
           end function skx_load_remote_miss
           
            

        end interface

        interface


           function skx_load_remote_hitm(  mem_load_l3_miss_retired_remote_hitm,&
                                          mem_load_retired_fb_hit,&
			                  mem_load_retired_l1_miss) &
                                          bind(c,name="skx_load_remote_hitm")
                integer(c_size_t) ::  mem_load_l3_miss_retired_remote_hitm
                integer(c_size_t) :: mem_load_retired_fb_hit
                integer(c_size_t) :: mem_load_retired_l1_miss
                real(c_float)     :: skx_load_remote_hitm
           end function skx_load_remote_hitm
           
            

        end interface

       interface


           function skx_load_remote_forward(  mem_load_l3_miss_retired_remote_fwd,&
                                          mem_load_retired_fb_hit,&
			                  mem_load_retired_l1_miss) &
                                          bind(c,name="skx_load_remote_forward")
                integer(c_size_t) ::  mem_load_l3_miss_retired_remote_fwd
                integer(c_size_t) :: mem_load_retired_fb_hit
                integer(c_size_t) :: mem_load_retired_l1_miss
                real(c_float)     :: skx_load_remote_forward
           end function skx_load_remote_forward
           
            

        end interface

        interface

           function skx_uops_executed_threshold( exe_activity_2_ports_util, &
                                                 upc) &
                                                 bind(c,name="skx_uops_executed_threshold")
                   integer(c_size_t) :: exe_activity_2_ports_util
                   real(c_float)     :: upc
                   real(c_float)     :: skx_uops_executed_threshold
           end function skx_uops_executed_threshold
           
        end interface

        interface

            function skx_core_bound_cycles(  exe_activity_exe_bound_0_ports, &
                                             exe_activity_1_ports_util,&
				             uops_executed_threshold) &
                                             bind(c,name="skx_core_bound_cycles")
                  integer(c_size_t) :: exe_activity_exe_bound_0_ports
                  integer(c_size_t) :: exe_activity_1_ports_util
                  real(c_float)     :: uops_executed_threshold
                  real(c_float)     :: skx_core_bound_cycles
            end function skx_core_bound_cycles

        end interface

       interface

          function skx_backend_bound_cycles( core_bound_cycles, &
                                             cycles_activity_stalls_mem_any, &
                                             exe_activity_bound_on_stores) &
                                             bind(c,name="skx_backend_bound_cycles")
                real(c_float)     :: core_bound_cycles
                integer(c_size_t) :: cycles_activity_stalls_mem_any
                integer(c_size_t) :: exe_activity_bound_on_stores
                real(c_float)     :: skx_backend_bound_cycles
          end function skx_backend_bound_cycles

       end interface

       interface

          function skx_memory_bound_fraction(  cycles_activity_stalls_mem_any, &
                                               exe_activity_bound_on_stores,&
				               backend_bound_cycles) &
                                               bind(c,name="skx_memory_bound_fraction")
                integer(c_size_t) ::  cycles_activity_stalls_mem_any
                integer(c_size_t) ::  exe_activity_bound_on_stores
                real(c_float)     ::  backend_bound_cycles
                real(c_float)     :: skx_memory_bound_fraction
          end function skx_memory_bound_fraction
          

       end interface

       interface

          function skx_l2_bound_ratio(  cycles_activity_stalls_l1d_miss,&
                                        cycles_activity_stalls_l2_miss,&
			                clks) &
                                        bind(c,name="skx_l2_bound_ratio")
                  integer(c_size_t) :: cycles_activity_stalls_l1d_miss
                  integer(c_size_t) :: cycles_activity_stalls_l2_miss
                  integer(c_size_t) :: clks
                  real(c_float)     :: skx_l2_bound_ratio
          end function skx_l2_bound_ratio
          

       end interface

       interface

           function skx_mem_bound_ratio(   cycles_activity_stalls_l3_miss,&
                                           clks,&
			                   l2_bound_ratio,&
			                   l2_bound) &
                                           bind(c,name="skx_mem_bound_ratio")
                   integer(c_size_t) :: cycles_activity_stalls_l3_miss
                   integer(c_size_t) :: clks
                   real(c_float)     :: l2_bound_ratio
                   real(c_float)     :: l2_bound
                   real(c_float)     :: skx_mem_bound_ratio
           end function skx_mem_bound_ratio
           
          
      end interface

      interface

         function skx_mem_lock_st_fraction(  mem_inst_retired_lock_loads, &
                                             mem_inst_retired_all_stores) &
                                             bind(c,name="skx_mem_lock_st_fraction")
                 integer(c_size_t) ::  mem_inst_retired_lock_loads
                 integer(c_size_t) ::  mem_inst_retired_all_stores
                 real(c_float)     :: skx_mem_lock_st_fraction
         end function skx_mem_lock_st_fraction
         
         
      end interface

      interface

          function skx_mispredict_clears( br_misp_retired_all_branches, &
                                          machine_clears_count) &
                                          bind(c,name="skx_mispredict_clears")
                  integer(c_size_t) :: br_misp_retired_all_branches
                  integer(c_size_t) :: machine_clears_count
                  real(c_float)     :: skx_mispredict_clears
          end function skx_mispredict_clears
          
         
     end interface

     interface

          function skx_retired_uops_fraction(uops_retired_retired_slots, &
                                             uops_issued_any) &
                                             bind(c,name="skx_retired_uops_fraction")
                   integer(c_size_t) :: uops_retired_retired_slots
                   integer(c_size_t) :: uops_issued_any
                   real(c_float)     :: skx_retired_uops_fraction
          end function skx_retired_uops_fraction
          

     end interface

       
     interface

         function skx_xsnp_hitm_fraction(  offcore_response_demand_data_rd_l3_hit_hitm_other,&
                                           offcore_response_demand_data_rd_l3_hit_snoop_hit_with_fwd) &
                                           bind(c,name="skx_xsnp_hitm_fraction")
                  integer(c_size_t) :: offcore_response_demand_data_rd_l3_hit_hitm_other
                  integer(c_size_t) ::  offcore_response_demand_data_rd_l3_hit_snoop_hit_with_fwd
                  real(c_float)     :: skx_xsnp_hitm_fraction
         end function skx_xsnp_hitm_fraction
        
     end interface

     interface

            function skx_all_rfo_l3_hit_snoop_hitm(  offcore_response_demand_rfo_l3_hit_hitm_other_core, &
                                                     offcore_response_pf_l2_rfo_l3_hit_hitm_other_core) &
                                                     bind(c,name="skx_all_rfo_l3_hit_snoop_hitm")
                   integer(c_size_t) ::  offcore_response_demand_rfo_l3_hit_hitm_other_core
                   integer(c_size_t) ::   offcore_response_pf_l2_rfo_l3_hit_hitm_other_core
                   real(c_float)     ::  skx_all_rfo_l3_hit_snoop_hitm
            end function skx_all_rfo_l3_hit_snoop_hitm
            

      end interface

      interface

         function skx_retired_uops_cycle( uops_retired_retired_slots, &
                                          clks) &
                                          bind(c,name="skx_retired_uops_cycle")
                  integer(c_size_t) :: uops_retired_retired_slots
                  integer(c_size_t) :: clks
                  real(c_float)     :: skx_retired_uops_cycle
         end function skx_retired_uops_cycle
         

      end interface


      interface

          function skx_uops_per_inst(  uops_retired_retired_slots, &
                                       inst_retired_any) &
                                       bind(c,name="skx_uops_per_inst")
                   integer(c_size_t) :: uops_retired_retired_slots
                   integer(c_size_t) :: inst_retired_any
                   real(c_float)     :: skx_uops_per_inst
          end function skx_uops_per_inst
          
       end interface

       interface

          function skx_instr_per_cycle( inst_retired_any, &
                                        clks) &
                                        bind(c,name="skx_instr_per_cycle")
                  integer(c_size_t) :: inst_retired_any
                  integer(c_size_t) :: clks
                  real(c_float)     :: skx_instr_per_cycle
          end function skx_instr_per_cycle
          

       end interface

       interface

           function skx_instr_branch_taken(inst_retired_any,&
                                          br_inst_retired_near_taken )&
                                          bind(c,name="skx_instr_branch_taken")
                 integer(c_size_t) :: inst_retired_any
                 integer(c_size_t) ::  br_inst_retired_near_taken
                 real(c_float)     :: skx_instr_branch_taken
           end function skx_instr_branch_taken

       end interface

       interface

          function skx_cycles_per_inst(ipc) &
               bind(c,name="skx_cycles_per_inst")
            real(c_float) :: ipc
            real(c_float) :: skx_cycles_per_inst
          end function
          
       end interface


       interface
